--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 </head>
 
 <body>
-	<div>
 		<p>The content of the document...</p>
-	</div>
+		<p>The content of the document...</p>
 </body>
 </html>
 
