--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-		<p>The content of the document...</p>
+		<p>Oksana</p>
 		<p>The content of the document...</p>
 </body>
 </html>
